--- a/TeaLove-Front/index.html
+++ b/TeaLove-Front/index.html
@@ -9,7 +9,16 @@
   </head>
   <body>
     <div class="section">
-      <button id="connectButton">Connect Wallet</button>
+      <div class="top-bar">
+        <button id="connectButton">Connect Wallet</button>
+        <p class="contract-address">
+          Contract Address:
+          <a
+            href="https://sepolia.tea.xyz/address/0x4DD4bF108C5eeafF6c4972752593bB28277E6c4D"
+          />
+          0x4DD4bF108C5eeafF6c4972752593bB28277E6c4D </a>
+        </p>
+      </div>
       <div class="stats">
         <p>Total Clicks:</p>
         <span id="totalClicks">0</span>
