Added target='_blank' rel='noopener noreferrer' to contract address link

--- a/TeaLove-Front/index.html
+++ b/TeaLove-Front/index.html
@@ -14,7 +14,7 @@
         <p class="contract-address">
           Contract Address:
           <a
-            href="https://sepolia.tea.xyz/address/0x4DD4bF108C5eeafF6c4972752593bB28277E6c4D"
+            href="https://sepolia.tea.xyz/address/0x4DD4bF108C5eeafF6c4972752593bB28277E6c4D" target="_blank" rel="noopener noreferrer"
           />
           0x4DD4bF108C5eeafF6c4972752593bB28277E6c4D </a>
         </p>
