Added github link related divs

--- a/TeaLove-Front/index.html
+++ b/TeaLove-Front/index.html
@@ -11,13 +11,28 @@
     <div class="section">
       <div class="top-bar">
         <button id="connectButton">Connect Wallet</button>
-        <p class="contract-address">
-          Contract Address:
-          <a
-            href="https://sepolia.tea.xyz/address/0x4DD4bF108C5eeafF6c4972752593bB28277E6c4D" target="_blank" rel="noopener noreferrer"
-          />
-          0x4DD4bF108C5eeafF6c4972752593bB28277E6c4D </a>
-        </p>
+        <div class="info-block">
+          <p class="contract-address">
+            Contract Address:
+            <a
+              href="https://sepolia.tea.xyz/address/0x4DD4bF108C5eeafF6c4972752593bB28277E6c4D"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              0x4DD4bF108C5eeafF6c4972752593bB28277E6c4D
+            </a>
+          </p>
+          <p class="github-link">
+            GitHub:
+            <a
+              href="https://github.com/Ara-miri/Vercel-app"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              https://github.com/Ara-miri/Vercel-app
+            </a>
+          </p>
+        </div>
       </div>
       <div class="stats">
         <p>Total Clicks:</p>
